# selfwork-fast-api

./: .gitignore  main.py  pyproject.toml
