[project]
name = "selfwork-fast-api"
version = "0.1.0"
description = ""
authors = [
    {name = "albox7",email = "16341764+albox7@users.noreply.github.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
